load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "IDKitExample",
    srcs = ["IDKitExample.swift"],
    module_name = "IDKitExample",
    tags = ["manual"],
    target_compatible_with = select({
        "@platforms//os:ios": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_idkit_swift//:IDKit"],
)

apple_build_tests(
    exclude = [
        "tvos",
        "watchos",
        "visionos",
    ],
    targets = [":IDKitExample"],
)
