load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "LogExample",
    srcs = ["LogExample.swift"],
    module_name = "LogExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_log//:Logging"],
)

apple_build_tests(targets = [":LogExample"])

build_test(
    name = "build_test",
    targets = [":LogExample"],
)
