load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

# MiSnap-iOS ships as iOS xcframeworks, so MiSnapExample only configures
# successfully when targeting iOS.
swift_library(
    name = "MiSnapExample",
    srcs = ["MiSnapExample.swift"],
    module_name = "MiSnapExample",
    tags = ["manual"],
    target_compatible_with = ["@platforms//os:ios"],
    visibility = ["//visibility:public"],
    deps = [
        "@swiftpkg_misnap_ios//:MiSnap",
        "@swiftpkg_misnap_ios//:MiSnapCore",
        "@swiftpkg_misnap_ios//:MiSnapFacialCapture",
        "@swiftpkg_misnap_ios//:MiSnapFacialCaptureUX",
        "@swiftpkg_misnap_ios//:MiSnapIAD",
        "@swiftpkg_misnap_ios//:MiSnapNFC",
        "@swiftpkg_misnap_ios//:MiSnapNFCUX",
        "@swiftpkg_misnap_ios//:MiSnapUX",
        "@swiftpkg_misnap_ios//:MiSnapVoiceCapture",
        "@swiftpkg_misnap_ios//:MiSnapVoiceCaptureUX",
    ],
)

apple_build_tests(
    exclude = [
        "macos",
        "tvos",
        "watchos",
        "visionos",
    ],
    tags = ["manual"],
    targets = [":MiSnapExample"],
)
