load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "NIOExample",
    srcs = ["NIOExample.swift"],
    module_name = "NIOExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "@swiftpkg_swift_nio//:NIOCore",
        "@swiftpkg_swift_nio//:NIOPosix",
    ],
)

apple_build_tests(
    targets = [":NIOExample"],
    exclude = ["tvos", "watchos", "visionos"],
)

build_test(
    name = "build_test",
    targets = [":NIOExample"],
)
