load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:objc_library.bzl", "objc_library")
load("@rules_swift//swift:swift.bzl", "swift_binary")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_binary(
    name = "OpenCVExample",
    srcs = ["OpenCVExample.swift"],
    module_name = "OpenCVExample",
    tags = ["manual"],
    target_compatible_with = ["@platforms//os:ios"],
    visibility = ["//visibility:public"],
    deps = [
        # "//:opencv",
        ":OpenCVObjCBridge",
    ],
)

objc_library(
    name = "OpenCVObjCBridge",
    srcs = ["OpenCVObjCBridge.m"],
    hdrs = ["OpenCVObjCBridge.h"],
    enable_modules = True,
    module_name = "OpenCVObjCBridgeModule",
    sdk_frameworks = ["Foundation"],
    tags = ["manual"],
    deps = [":OpenCVCppBridge"],
)

cc_library(
    name = "OpenCVCppBridge",
    srcs = ["OpenCVCppBridge.cc"],
    hdrs = ["OpenCVCppBridge.h"],
    tags = ["manual"],
    deps = ["//:opencv"],
)

apple_build_tests(
    exclude = [
        "macos",
        "tvos",
        "watchos",
        "visionos",
    ],
    targets = [":OpenCVExample"],
)
