load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "PerceptionExample",
    srcs = ["PerceptionExample.swift"],
    module_name = "PerceptionExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_perception//:Perception"],
)

apple_build_tests(targets = [":PerceptionExample"])
