load("@rules_apple//apple:ios.bzl", "ios_build_test")
load("@rules_apple//apple:macos.bzl", "macos_build_test")
load("@rules_apple//apple:tvos.bzl", "tvos_build_test")
load("@rules_apple//apple:visionos.bzl", "visionos_build_test")
load("@rules_apple//apple:watchos.bzl", "watchos_build_test")
load("@rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "RxSwiftExample",
    srcs = ["RxSwiftExample.swift"],
    module_name = "RxSwiftExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_rxswift//:RxSwift"],
)

ios_build_test(
    name = "ios_build_test",
    minimum_os_version = "16.0",
    target_compatible_with = ["@apple_support//constraints:apple"],
    targets = [":RxSwiftExample"],
)

macos_build_test(
    name = "macos_build_test",
    minimum_os_version = "13.0",
    target_compatible_with = ["@apple_support//constraints:apple"],
    targets = [":RxSwiftExample"],
)

tvos_build_test(
    name = "tvos_build_test",
    minimum_os_version = "16.0",
    target_compatible_with = ["@apple_support//constraints:apple"],
    targets = [":RxSwiftExample"],
)

watchos_build_test(
    name = "watchos_build_test",
    minimum_os_version = "9.0",
    target_compatible_with = ["@apple_support//constraints:apple"],
    targets = [":RxSwiftExample"],
)

visionos_build_test(
    name = "visionos_build_test",
    minimum_os_version = "1.0",
    target_compatible_with = ["@apple_support//constraints:apple"],
    targets = [":RxSwiftExample"],
)
