load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("//:apple_build_tests.bzl", "apple_build_tests")

swift_library(
    name = "RxSwiftExample",
    srcs = ["RxSwiftExample.swift"],
    module_name = "RxSwiftExample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_rxswift//:RxSwift"],
)

apple_build_tests(targets = [":RxSwiftExample"])
